package com.example.nosick3;

public class LiquidCovidAdapter {
}
